--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@ color: #f25e43;
             <p><b>Powered by Google Recaptcha.</b> Please verify that you are a human before beginning download:</p>
             <br>
                 <div data-captcha-enable="true"></div>
-          <button class="button" disabled>> Begin Download</button>  
+          <button class="button" disabled> Begin Download </button>  
         </center>
         <br><br>
         <div style='background:#fff;padding:10px;'>
