--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE HTML>
 <html lang="en-US">
 <head>
@@ -10,7 +11,7 @@
 
 body{
     font-family: 'Nunito', sans-serif;
-background:url(https://i.imgur.com/5F8Iumv.png);
+background:url(https://www.toptal.com/designers/subtlepatterns/patterns/stripes-light.png);
 padding:10px;
 }
 .row {
@@ -168,10 +169,10 @@ color: #f25e43;
 </head>
 
 <body>
-    <div style='background:#292929;position:relative;top:-20px;padding:10px;'>
+    <div style='position:relative;top:-20px;padding:10px;'>
         <center>
                 <img style="border-radius: 25px;
-                border: 2px solid #73AD21;" src="https://i.imgur.com/ptGV1we.png" >
+                border: 2px solid grey;" src="https://i.imgur.com/ptGV1we.png" >
         </center>
     </div>
     <div style='max-width:600px;padding:10px;margin:0px auto;background:#eee;border:10px solid #fff;box-shadow:0px 0px 3px #777'>
@@ -195,7 +196,7 @@ color: #f25e43;
             <p><b>Powered by Google Recaptcha.</b> Please verify that you are a human before beginning download:</p>
             <br>
                 <div data-captcha-enable="true"></div>
-          <button class="button" disabled> Begin Download </button>  
+          <button class="button" disabled>> Begin Download</button>  
         </center>
         <br><br>
         <div style='background:#fff;padding:10px;'>
@@ -208,6 +209,7 @@ From the very beginning, we made it our priority to make it easy for programmers
 Thank you for using our platform!
 <br>
 OBDII Tech Team
+<br><br>
         </div>
     </div>
     <div>
