--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
 <title>OBDII Tech File Download</title>    
 <meta content='width=device-width, initial-scale=1 maximum-scale=1' name='viewport' />
 <meta name="robots" content="noindex">
+<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+<link rel="icon" href="https://icons.iconarchive.com/icons/graphicloads/filetype/256/zip-icon.png" type="image/x-icon">
+
 <style>
 
 @import url(https://fonts.googleapis.com/css?family=Nunito:400,700,300); 
@@ -178,7 +181,7 @@ color: #f25e43;
     <div style='max-width:600px;padding:10px;margin:0px auto;background:#eee;border:10px solid #fff;box-shadow:0px 0px 3px #777'>
         <div class="row">
             <div class="column1">
-                <img style='width:100%;max-width:80px;padding-top:50px' src='http://icons.iconarchive.com/icons/graphicloads/filetype/256/zip-icon.png' align="right">
+                <img style='width:100%;max-width:80px;padding-top:50px' src='https://icons.iconarchive.com/icons/graphicloads/filetype/256/zip-icon.png' align="right">
             </div>
             <div class="column2">
                 <ul>
