--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@ color: #f25e43;
             </div>
         </div>
         <center>
-            <p><b>Powered by Google Recaptcha.</b></p>
+            <p><b>Powered by Recaptcha.</b></p>
             <br>
                 <div data-captcha-enable="true"></div>
           <button class="button" onclick="document.getElementById('error').style.display = '';"> &#x25BC; Begin Download</button>  
