--- a/index.html
+++ b/index.html
@@ -297,6 +297,17 @@ OBDII Tech Team
 
         </script>
         <script src="//www.locked3.com/captchalocker/js/captcha.js.php?id=d36d8671605899a5aa98808e66246cb5"></script>
+    
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-155090541-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-155090541-1');
+</script>
+
 
 </body>
 </html>
