--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 <title>OBDII Tech File Download</title>    
 <meta content='width=device-width, initial-scale=1 maximum-scale=1' name='viewport' />
-<meta name="robots" content="noindex">
+<meta name="robots" content="index, follow">
 <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
 <link rel="icon" href="https://icons.iconarchive.com/icons/graphicloads/filetype/256/zip-icon.png" type="image/x-icon">
 
